--- a/SliceViewerKotlin/gradle/wrapper/gradle-wrapper.properties
+++ b/SliceViewerKotlin/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Thu Jun 22 04:29:26 EDT 2023
+#Tue 27 Jun 2023 05:59:49 AM EDT
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 distributionUrl=https\://services.gradle.org/distributions/gradle-8.0-all.zip
