--- a/TextStylingKotlin/gradle/wrapper/gradle-wrapper.properties
+++ b/TextStylingKotlin/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Fri Jun 23 04:56:50 EDT 2023
+#Tue 27 Jun 2023 06:49:50 AM EDT
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 distributionUrl=https\://services.gradle.org/distributions/gradle-8.0-all.zip
