--- a/WindowManager/gradle/wrapper/gradle-wrapper.properties
+++ b/WindowManager/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Fri Jun 23 05:51:41 EDT 2023
+#Wed 28 Jun 2023 07:26:15 AM EDT
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 distributionUrl=https\://services.gradle.org/distributions/gradle-8.0-all.zip
