--- a/AdvancedImmersiveMode/gradle/wrapper/gradle-wrapper.properties
+++ b/AdvancedImmersiveMode/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Thu 22 Jun 2023 08:27:04 AM EDT
+#Sat Jul  8 05:58:19 EDT 2023
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
