--- a/EmojiCompatKotlin/gradle/wrapper/gradle-wrapper.properties
+++ b/EmojiCompatKotlin/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Mon 26 Jun 2023 06:56:18 AM EDT
+#Mon Jul 10 04:36:44 EDT 2023
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
