--- a/TextRoundedBackgroundKotlin/gradle/wrapper/gradle-wrapper.properties
+++ b/TextRoundedBackgroundKotlin/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Tue 27 Jun 2023 06:27:57 AM EDT
+#Mon Jul 10 05:28:42 EDT 2023
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 distributionUrl=https\://services.gradle.org/distributions/gradle-8.0-all.zip
