--- a/ClippingBasic/gradle/wrapper/gradle-wrapper.properties
+++ b/ClippingBasic/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Sun Jul  9 04:49:39 EDT 2023
+#Tue 01 Aug 2023 07:44:28 AM EDT
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
