--- a/EmojiCompat/app/build.gradle
+++ b/EmojiCompat/app/build.gradle
@@ -18,7 +18,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 33
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.example.android.emojicompat"
@@ -42,7 +42,7 @@ android {
         jvmTarget = '17'
     }
     namespace 'com.example.android.emojicompat'
-    configurations.all {
+    configurations.configureEach {
         resolutionStrategy.force "com.android.support:support-annotations:26.0.0"
     }
 }
