--- a/TextLinkify/gradle/wrapper/gradle-wrapper.properties
+++ b/TextLinkify/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Mon Jul 10 05:24:53 EDT 2023
+#Wed Aug  2 06:27:00 AM EDT 2023
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 distributionUrl=https\://services.gradle.org/distributions/gradle-8.0-all.zip
