--- a/TextStyling/app/build.gradle
+++ b/TextStyling/app/build.gradle
@@ -17,7 +17,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 33
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.android.example.text.styling"
