--- a/TextStylingKotlin/gradle/wrapper/gradle-wrapper.properties
+++ b/TextStylingKotlin/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Tue Jul 11 04:18:48 EDT 2023
+#Wed 02 Aug 2023 06:35:35 AM EDT
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 distributionUrl=https\://services.gradle.org/distributions/gradle-8.0-all.zip
