--- a/WindowInsetsAnimation/app/build.gradle
+++ b/WindowInsetsAnimation/app/build.gradle
@@ -18,7 +18,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 33
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.google.android.samples.insetschat"
