--- a/AdvancedImmersiveMode/gradle/wrapper/gradle-wrapper.properties
+++ b/AdvancedImmersiveMode/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Tue 01 Aug 2023 07:25:03 AM EDT
+#Tue Aug 15 05:34:35 EDT 2023
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
