--- a/AndroidOnChromeOSDragAndDropDemo/gradle/wrapper/gradle-wrapper.properties
+++ b/AndroidOnChromeOSDragAndDropDemo/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Tue 01 Aug 2023 07:31:49 AM EDT
+#Tue Aug 15 05:41:49 EDT 2023
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
