--- a/People/gradle/wrapper/gradle-wrapper.properties
+++ b/People/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Wed 02 Aug 2023 06:18:15 AM EDT
+#Wed Aug 16 04:46:00 EDT 2023
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
