--- a/AppWidget/app/build.gradle
+++ b/AppWidget/app/build.gradle
@@ -20,11 +20,12 @@ plugins {
 }
 
 android {
-    compileSdk 33
+    compileSdk 34
     defaultConfig {
         applicationId "com.example.android.appwidget"
         minSdkVersion 31
-        targetSdkVersion 33
+        //noinspection EditedTargetSdkVersion
+        targetSdkVersion 34
         versionCode 1
         versionName "1.0"
 
