--- a/DragAndDropAcrossApps/DragSource/build.gradle
+++ b/DragAndDropAcrossApps/DragSource/build.gradle
@@ -18,12 +18,13 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.example.android.dragsource"
         minSdkVersion 24
-        targetSdkVersion 33
+        //noinspection EditedTargetSdkVersion
+        targetSdkVersion 34
         versionCode 1
         versionName "1.0"
     }
