--- a/Notifications/Wearable/build.gradle
+++ b/Notifications/Wearable/build.gradle
@@ -1,4 +1,3 @@
-
 buildscript {
     repositories {
         google()
@@ -6,7 +5,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.1.0'
+        classpath 'com.android.tools.build:gradle:8.1.1'
     }
 }
 
@@ -19,10 +18,10 @@ repositories {
 
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'androidx.wear:wear:1.2.0'
+    implementation 'androidx.wear:wear:1.3.0'
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.legacy:legacy-support-v13:1.0.0'
-    implementation 'com.google.android.gms:play-services-wearable:18.0.0'
+    implementation 'com.google.android.gms:play-services-wearable:18.1.0'
     compileOnly 'com.google.android.wearable:wearable:2.9.0'
     implementation 'com.google.android.support:wearable:2.9.0'
     implementation project(':Shared')
@@ -38,7 +37,7 @@ List<String> dirs = [
 
 android {
 
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         versionCode 1
@@ -46,7 +45,8 @@ android {
 
         minSdkVersion 23
 
-        targetSdkVersion 33
+        //noinspection EditedTargetSdkVersion
+        targetSdkVersion 34
 
          multiDexEnabled true
 
