--- a/SliceViewerKotlin/app/build.gradle
+++ b/SliceViewerKotlin/app/build.gradle
@@ -23,11 +23,12 @@ dependencies {
 }
 
 android {
-    compileSdk 33
+    compileSdk 34
     defaultConfig {
         applicationId "com.example.android.sliceviewer"
         minSdkVersion 19
-        targetSdkVersion 33
+        //noinspection EditedTargetSdkVersion
+        targetSdkVersion 34
         versionCode 1
         versionName "1.0"
     }
