--- a/WindowInsetsAnimation/app/build.gradle
+++ b/WindowInsetsAnimation/app/build.gradle
@@ -18,12 +18,13 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.google.android.samples.insetschat"
         minSdkVersion 21
-        targetSdkVersion 33
+        //noinspection EditedTargetSdkVersion
+        targetSdkVersion 34
         versionCode 1
         versionName "1.0"
     }
@@ -46,7 +47,6 @@ android {
 dependencies {
     implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.dynamicanimation:dynamicanimation-ktx:1.0.0-alpha03'
-
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
 }
