--- a/WindowManager/gradle/wrapper/gradle-wrapper.properties
+++ b/WindowManager/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Wed Aug 16 05:46:51 EDT 2023
+#Fri 01 Sep 2023 06:43:12 AM EDT
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 distributionUrl=https\://services.gradle.org/distributions/gradle-8.0-all.zip
