--- a/DownloadableFonts/gradle/wrapper/gradle-wrapper.properties
+++ b/DownloadableFonts/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Thu 31 Aug 2023 07:06:54 AM EDT
+#Wed Sep 20 03:58:15 EDT 2023
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
