--- a/DownloadableFontsKotlin/gradle/wrapper/gradle-wrapper.properties
+++ b/DownloadableFontsKotlin/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Thu 31 Aug 2023 07:23:51 AM EDT
+#Wed Sep 20 04:09:10 EDT 2023
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
