--- a/TextLinkify/gradle/wrapper/gradle-wrapper.properties
+++ b/TextLinkify/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Fri 01 Sep 2023 06:03:28 AM EDT
+#Thu Sep 21 03:56:08 EDT 2023
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 distributionUrl=https\://services.gradle.org/distributions/gradle-8.0-all.zip
