--- a/TextStyling/gradle/wrapper/gradle-wrapper.properties
+++ b/TextStyling/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Fri 01 Sep 2023 06:20:07 AM EDT
+#Thu Sep 21 04:25:20 EDT 2023
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 distributionUrl=https\://services.gradle.org/distributions/gradle-8.0-all.zip
