--- a/DarkTheme/gradle/wrapper/gradle-wrapper.properties
+++ b/DarkTheme/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Tue 19 Sep 2023 06:31:38 AM EDT
+#Sat Oct  7 04:31:27 EDT 2023
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
